[gd_scene load_steps=67 format=3 uid="uid://ce3vbk5dwlguk"]

[ext_resource type="Script" path="res://Escenas/jugador.gd" id="1_tseh1"]
[ext_resource type="PackedScene" uid="uid://c68126dg4jwrr" path="res://Escenas/disparo.tscn" id="2_bc06l"]
[ext_resource type="Texture2D" uid="uid://c0og8tih4qbpe" path="res://Sprites PI/jugador1.png" id="2_i3jyo"]
[ext_resource type="AudioStream" uid="uid://lladla6n0cc2" path="res://Efectos_Sonidos/Salto.ogg" id="3_63fl8"]
[ext_resource type="AudioStream" uid="uid://bjqemk8emhvwq" path="res://Efectos_Sonidos/DobleJump.ogg" id="4_lxvsh"]
[ext_resource type="Texture2D" uid="uid://dvkb2lj6fo37y" path="res://Sprites PI/Explosion_Media.png" id="4_v76bq"]
[ext_resource type="AudioStream" uid="uid://cp7bbs1lc5voc" path="res://Efectos_Sonidos/going-on-a-forest-road-gravel-and-grass-6404.mp3" id="6_64usm"]
[ext_resource type="AudioStream" uid="uid://bmom5qmyp6rtd" path="res://Efectos_Sonidos/dañop.wav" id="7_txqud"]
[ext_resource type="AudioStream" uid="uid://cej4ps8urxex7" path="res://Efectos_Sonidos/Rasholaser.ogg" id="9_gk74a"]
[ext_resource type="AudioStream" uid="uid://0b82asbc2s8g" path="res://Efectos_Sonidos/dash.wav" id="10_lxuxi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uq3hl"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ck2r"]
atlas = ExtResource("2_i3jyo")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fun3"]
atlas = ExtResource("2_i3jyo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sk3x"]
atlas = ExtResource("2_i3jyo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy5sa"]
atlas = ExtResource("2_i3jyo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thfkt"]
atlas = ExtResource("2_i3jyo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp1m1"]
atlas = ExtResource("2_i3jyo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtp5p"]
atlas = ExtResource("2_i3jyo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mamyq"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcw1e"]
atlas = ExtResource("2_i3jyo")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_41l74"]
atlas = ExtResource("2_i3jyo")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_167no"]
atlas = ExtResource("2_i3jyo")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lei7n"]
atlas = ExtResource("2_i3jyo")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgxsp"]
atlas = ExtResource("4_v76bq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_det4h"]
atlas = ExtResource("4_v76bq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8bsx"]
atlas = ExtResource("4_v76bq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vy2x"]
atlas = ExtResource("4_v76bq")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o62s5"]
atlas = ExtResource("4_v76bq")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_euqhr"]
atlas = ExtResource("4_v76bq")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g25j"]
atlas = ExtResource("4_v76bq")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrlux"]
atlas = ExtResource("4_v76bq")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2na87"]
atlas = ExtResource("4_v76bq")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj800"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e53m6"]
atlas = ExtResource("2_i3jyo")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7wj4"]
atlas = ExtResource("2_i3jyo")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kcga"]
atlas = ExtResource("2_i3jyo")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqya3"]
atlas = ExtResource("2_i3jyo")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4jcj"]
atlas = ExtResource("2_i3jyo")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ei8"]
atlas = ExtResource("2_i3jyo")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lks8m"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwcpb"]
atlas = ExtResource("2_i3jyo")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wna4u"]
atlas = ExtResource("2_i3jyo")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig0xj"]
atlas = ExtResource("2_i3jyo")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi1nm"]
atlas = ExtResource("2_i3jyo")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_frgxl"]
atlas = ExtResource("2_i3jyo")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnaxr"]
atlas = ExtResource("2_i3jyo")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsrda"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8mfe"]
atlas = ExtResource("2_i3jyo")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1juwx"]
atlas = ExtResource("2_i3jyo")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot67l"]
atlas = ExtResource("2_i3jyo")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4vml"]
atlas = ExtResource("2_i3jyo")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk0xt"]
atlas = ExtResource("2_i3jyo")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3j3d"]
atlas = ExtResource("2_i3jyo")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dooao"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j5so"]
atlas = ExtResource("2_i3jyo")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sywl3"]
atlas = ExtResource("2_i3jyo")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf8du"]
atlas = ExtResource("2_i3jyo")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6fog"]
atlas = ExtResource("2_i3jyo")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b03va"]
atlas = ExtResource("2_i3jyo")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i2kc"]
atlas = ExtResource("2_i3jyo")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umxht"]
atlas = ExtResource("2_i3jyo")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wi3j"]
atlas = ExtResource("2_i3jyo")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00t7n"]
atlas = ExtResource("2_i3jyo")
region = Rect2(384, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jja8s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq3hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ck2r")
}],
"loop": false,
"name": &"DashXD",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fun3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sk3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy5sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thfkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp1m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtp5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mamyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcw1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41l74")
}],
"loop": false,
"name": &"appear",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_167no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lei7n")
}],
"loop": false,
"name": &"daño",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgxsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_det4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8bsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vy2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o62s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euqhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g25j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrlux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2na87")
}],
"loop": false,
"name": &"die-invisible",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj800")
}],
"loop": false,
"name": &"doble_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e53m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7wj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kcga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqya3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4jcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3ei8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lks8m")
}],
"loop": false,
"name": &"jump_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwcpb")
}],
"loop": true,
"name": &"jump_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wna4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig0xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi1nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frgxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnaxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsrda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8mfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1juwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot67l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4vml")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk0xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3j3d")
}],
"loop": false,
"name": &"shoot_normal",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dooao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sywl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf8du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6fog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i2kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umxht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wi3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00t7n")
}],
"loop": true,
"name": &"shoot_run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ainkh"]
radius = 9.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j3lqm"]
radius = 9.0
height = 62.0

[node name="Jugador" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 16
script = ExtResource("1_tseh1")
disparo = ExtResource("2_bc06l")

[node name="animaciones" type="AnimatedSprite2D" parent="." groups=["Nodojugador"]]
sprite_frames = SubResource("SpriteFrames_jja8s")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ainkh")

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="coyote_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="damage_detection" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_detection"]
shape = SubResource("CapsuleShape2D_j3lqm")

[node name="audio_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_63fl8")

[node name="audio_doblejump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lxvsh")

[node name="audiodamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_txqud")
volume_db = 2.985

[node name="audio_walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_64usm")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="dash_again" type="Timer" parent="."]

[node name="die_time" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="audio_disparo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_gk74a")

[node name="audio_dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_lxuxi")
volume_db = 4.854

[connection signal="animation_finished" from="animaciones" to="." method="_on_animaciones_animation_finished"]
[connection signal="timeout" from="coyote_timer" to="." method="_on_coyote_timer_timeout"]
[connection signal="area_shape_entered" from="damage_detection" to="." method="_on_damage_detection_area_shape_entered"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again" to="." method="_on_dash_again_timeout"]
[connection signal="timeout" from="die_time" to="." method="_on_die_time_timeout"]
